# ambits

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
skills/ambit/: SKILL.md  coverage-guide.md  examples.md  session-management.md
src/: app.rs  coverage.rs  events.rs  main.rs  skill.rs
src/ingest/: claude.rs  mod.rs
src/parser/: mod.rs  python.rs  rust.rs  typescript.rs
src/serena/: mod.rs
src/symbols/: merkle.rs  mod.rs
src/tracking/: agents.rs  mod.rs
src/ui/: activity.rs  colors.rs  mod.rs  stats.rs  tree_view.rs
tests/: e2e.rs
tests/helpers/: mod.rs
