[package]
name = "ambits"
version = "0.8.0"
edition = "2021"
description = "command line utility for symbols used by Claude agents"
repository = "https://github.com/joshLong145/claude-marker"
license = "MIT"
keywords = ["claude", "claude-code", "serena"]
categories = ["command-line-utilities"]
exclude = [
    "images/*"
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
notify = "7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
color-eyre = "0.6"
serde-pickle = "1.2"

[dev-dependencies]
tempfile = "3"

[lib]
name = "ambits"
path = "src/lib.rs"

[[bin]]
name = "ambits"
path = "src/main.rs"
